--- a/content/authors/Sangdon Park/papers.bib
+++ b/content/authors/Sangdon Park/papers.bib
@@ -50,15 +50,14 @@
       url={https://arxiv.org/abs/2506.14067},
 }
 
-@misc{jeong2025selectivecodegenerationfunctional,
-    title={Selective Code Generation for Functional Guarantees},
-    author={Jaewoo Jeong and Taesoo Kim and Sangdon Park},
-    year={2025},
-    month={July},
-    eprint={2505.13553},
-    archivePrefix={arXiv},
-    primaryClass={cs.SE},
-    url={https://arxiv.org/abs/2505.13553},
+@misc{jeong2025ensuringfunctionalcorrectnesslarge,
+      title={Ensuring Functional Correctness of Large Code Models with Selective Generation},
+      author={Jaewoo Jeong and Taesoo Kim and Sangdon Park},
+      year={2025},
+      eprint={2505.13553},
+      archivePrefix={arXiv},
+      primaryClass={cs.SE},
+      url={https://arxiv.org/abs/2505.13553},
 }
 
 @InProceedings{wang2025soundboost,
