--- a/content/publication/jeong-2025-ensuringfunctionalcorrectnesslarge/cite.bib
+++ b/content/publication/jeong-2025-ensuringfunctionalcorrectnesslarge/cite.bib
@@ -1,10 +1,9 @@
-@misc{jeong2025selectivecodegenerationfunctional,
+@misc{jeong2025ensuringfunctionalcorrectnesslarge,
  archiveprefix = {arXiv},
  author = {Jaewoo Jeong and Taesoo Kim and Sangdon Park},
  eprint = {2505.13553},
- month = {July},
  primaryclass = {cs.SE},
- title = {Selective Code Generation for Functional Guarantees},
+ title = {Ensuring Functional Correctness of Large Code Models with Selective Generation},
  url = {https://arxiv.org/abs/2505.13553},
  year = {2025}
 }
