--- a/content/authors/Sangdon Park/papers.bib
+++ b/content/authors/Sangdon Park/papers.bib
@@ -8,14 +8,26 @@
       url={https://arxiv.org/abs/2509.14589},
 }
 
-@inproceedings{
-    kim2025chronobias,
-    title={ChronoBias: A Benchmark for Evaluating Temporal Group Bias in Retrieval-augmented Language Models},
-    author={Kyungmin Kim and Youngbin Choi and Hyounghun Kim and Dongwoo Kim and Sangdon Park},
-    booktitle={Empirical Methods in Natural Language Processing},
-    keywords = {EMNLP Findings},
-    year={2025},
-    url={https://openreview.net/forum?id=7vuMXtHBkB}
+@inproceedings{kim2025chronobias,
+    title = "{C}hrono{B}ias: A Benchmark for Evaluating Time-conditional Group Bias in the Time-sensitive Knowledge of Large Language Models",
+    author = "Kim, Kyungmin  and
+      Choi, Youngbin  and
+      Kim, Hyounghun  and
+      Kim, Dongwoo  and
+      Park, Sangdon",
+    editor = "Christodoulopoulos, Christos  and
+      Chakraborty, Tanmoy  and
+      Rose, Carolyn  and
+      Peng, Violet",
+    booktitle = "Findings of the Association for Computational Linguistics: EMNLP 2025",
+    month = nov,
+    year = "2025",
+    address = "Suzhou, China",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2025.findings-emnlp.405/",
+    doi = "10.18653/v1/2025.findings-emnlp.405",
+    pages = "7658--7693",
+    ISBN = "979-8-89176-335-7"
 }
 
 @inproceedings{
