--- a/content/publication/kim-2025-chronobias/cite.bib
+++ b/content/publication/kim-2025-chronobias/cite.bib
@@ -1,8 +1,21 @@
 @inproceedings{kim2025chronobias,
- author = {Kyungmin Kim and Youngbin Choi and Hyounghun Kim and Dongwoo Kim and Sangdon Park},
- booktitle = {Empirical Methods in Natural Language Processing},
- keywords = {EMNLP Findings},
- title = {ChronoBias: A Benchmark for Evaluating Temporal Group Bias in Retrieval-augmented Language Models},
- url = {https://openreview.net/forum?id=7vuMXtHBkB},
+ address = {Suzhou, China},
+ author = {Kim, Kyungmin  and
+Choi, Youngbin  and
+Kim, Hyounghun  and
+Kim, Dongwoo  and
+Park, Sangdon},
+ booktitle = {Findings of the Association for Computational Linguistics: EMNLP 2025},
+ doi = {10.18653/v1/2025.findings-emnlp.405},
+ editor = {Christodoulopoulos, Christos  and
+Chakraborty, Tanmoy  and
+Rose, Carolyn  and
+Peng, Violet},
+ isbn = {979-8-89176-335-7},
+ month = {November},
+ pages = {7658--7693},
+ publisher = {Association for Computational Linguistics},
+ title = {ChronoBias: A Benchmark for Evaluating Time-conditional Group Bias in the Time-sensitive Knowledge of Large Language Models},
+ url = {https://aclanthology.org/2025.findings-emnlp.405/},
  year = {2025}
 }
