--- a/content/authors/Sangdon Park/papers.bib
+++ b/content/authors/Sangdon Park/papers.bib
@@ -1,3 +1,13 @@
+@misc{lee2025aikillswitchmalicious,
+      title={AI Kill Switch for malicious web-based LLM agent},
+      author={Sechan Lee and Sangdon Park},
+      year={2025},
+      eprint={2511.13725},
+      archivePrefix={arXiv},
+      primaryClass={cs.CR},
+      url={https://arxiv.org/abs/2511.13725},
+}
+
 @misc{kim2025atlantisaidriventhreatlocalization,
       title={ATLANTIS: AI-driven Threat Localization, Analysis, and Triage Intelligence System},
       author={Taesoo Kim and HyungSeok Han and Soyeon Park and Dae R. Jeong and Dohyeok Kim and Dongkwan Kim and Eunsoo Kim and Jiho Kim and Joshua Wang and Kangsu Kim and Sangwoo Ji and Woosun Song and Hanqing Zhao and Andrew Chin and Gyejin Lee and Kevin Stevens and Mansour Alharthi and Yizhuo Zhai and Cen Zhang and Joonun Jang and Yeongjin Jang and Ammar Askar and Dongju Kim and Fabian Fleischer and Jeongin Cho and Junsik Kim and Kyungjoon Ko and Insu Yun and Sangdon Park and Dowoo Baik and Haein Lee and Hyeon Heo and Minjae Gwon and Minjae Lee and Minwoo Baek and Seunggi Min and Wonyoung Kim and Yonghwi Jin and Younggi Park and Yunjae Choi and Jinho Jung and Gwanhyun Lee and Junyoung Jang and Kyuheon Kim and Yeonghyeon Cha and Youngjoon Kim},
@@ -19,9 +29,10 @@
       Chakraborty, Tanmoy  and
       Rose, Carolyn  and
       Peng, Violet",
-    booktitle = "Findings of the Association for Computational Linguistics: EMNLP 2025",
+    booktitle = "Findings of the Association for Computational Linguistics",
     month = nov,
     year = "2025",
+    keywords={EMNLP Findings},
     address = "Suzhou, China",
     publisher = "Association for Computational Linguistics",
     url = "https://aclanthology.org/2025.findings-emnlp.405/",
@@ -62,14 +73,14 @@
       url={https://arxiv.org/abs/2506.14067},
 }
 
-@misc{jeong2025ensuringfunctionalcorrectnesslarge,
-      title={Ensuring Functional Correctness of Large Code Models with Selective Generation},
-      author={Jaewoo Jeong and Taesoo Kim and Sangdon Park},
-      year={2025},
-      eprint={2505.13553},
-      archivePrefix={arXiv},
-      primaryClass={cs.SE},
-      url={https://arxiv.org/abs/2505.13553},
+@InProceedings{jeong2025ensuringfunctionalcorrectnesslarge,
+    title={Ensuring Functional Correctness of Large Code Models with Selective Generation},
+    author={Jaewoo Jeong and Taesoo Kim and Sangdon Park},
+    booktitle={Neural Information Processing Systems},
+    keywords={NeurIPS DL4C Workshop},
+    year={2025},
+    month={December},
+    url={https://arxiv.org/abs/2505.13553},
 }
 
 @InProceedings{wang2025soundboost,
