--- a/content/publication/kim-2025-chronobias/cite.bib
+++ b/content/publication/kim-2025-chronobias/cite.bib
@@ -5,13 +5,14 @@ Choi, Youngbin  and
 Kim, Hyounghun  and
 Kim, Dongwoo  and
 Park, Sangdon},
- booktitle = {Findings of the Association for Computational Linguistics: EMNLP 2025},
+ booktitle = {Findings of the Association for Computational Linguistics},
  doi = {10.18653/v1/2025.findings-emnlp.405},
  editor = {Christodoulopoulos, Christos  and
 Chakraborty, Tanmoy  and
 Rose, Carolyn  and
 Peng, Violet},
  isbn = {979-8-89176-335-7},
+ keywords = {EMNLP Findings},
  month = {November},
  pages = {7658--7693},
  publisher = {Association for Computational Linguistics},
