--- a/content/publication/jeong-2025-ensuringfunctionalcorrectnesslarge/cite.bib
+++ b/content/publication/jeong-2025-ensuringfunctionalcorrectnesslarge/cite.bib
@@ -1,8 +1,8 @@
-@misc{jeong2025ensuringfunctionalcorrectnesslarge,
- archiveprefix = {arXiv},
+@inproceedings{jeong2025ensuringfunctionalcorrectnesslarge,
  author = {Jaewoo Jeong and Taesoo Kim and Sangdon Park},
- eprint = {2505.13553},
- primaryclass = {cs.SE},
+ booktitle = {Neural Information Processing Systems},
+ keywords = {NeurIPS DL4C Workshop},
+ month = {December},
  title = {Ensuring Functional Correctness of Large Code Models with Selective Generation},
  url = {https://arxiv.org/abs/2505.13553},
  year = {2025}
