--- a/content/authors/Sangdon Park/papers.bib
+++ b/content/authors/Sangdon Park/papers.bib
@@ -2,6 +2,8 @@
       title={AI Kill Switch for malicious web-based LLM agent},
       author={Sechan Lee and Sangdon Park},
       year={2025},
+      month={September},
+      day={26},
       eprint={2511.13725},
       archivePrefix={arXiv},
       primaryClass={cs.CR},
@@ -12,6 +14,8 @@
       title={ATLANTIS: AI-driven Threat Localization, Analysis, and Triage Intelligence System},
       author={Taesoo Kim and HyungSeok Han and Soyeon Park and Dae R. Jeong and Dohyeok Kim and Dongkwan Kim and Eunsoo Kim and Jiho Kim and Joshua Wang and Kangsu Kim and Sangwoo Ji and Woosun Song and Hanqing Zhao and Andrew Chin and Gyejin Lee and Kevin Stevens and Mansour Alharthi and Yizhuo Zhai and Cen Zhang and Joonun Jang and Yeongjin Jang and Ammar Askar and Dongju Kim and Fabian Fleischer and Jeongin Cho and Junsik Kim and Kyungjoon Ko and Insu Yun and Sangdon Park and Dowoo Baik and Haein Lee and Hyeon Heo and Minjae Gwon and Minjae Lee and Minwoo Baek and Seunggi Min and Wonyoung Kim and Yonghwi Jin and Younggi Park and Yunjae Choi and Jinho Jung and Gwanhyun Lee and Junyoung Jang and Kyuheon Kim and Yeonghyeon Cha and Youngjoon Kim},
       year={2025},
+      month={September},
+      day={18},
       eprint={2509.14589},
       archivePrefix={arXiv},
       primaryClass={cs.CR},
@@ -20,19 +24,15 @@
 
 @inproceedings{kim2025chronobias,
     title = "{C}hrono{B}ias: A Benchmark for Evaluating Time-conditional Group Bias in the Time-sensitive Knowledge of Large Language Models",
-    author = "Kim, Kyungmin  and
-      Choi, Youngbin  and
-      Kim, Hyounghun  and
-      Kim, Dongwoo  and
-      Park, Sangdon",
+    author = "Kyungmin  Kim and Youngbin Choi and Hyounghun Kim and Dongwoo Kim and Sangdon Park",
     editor = "Christodoulopoulos, Christos  and
       Chakraborty, Tanmoy  and
       Rose, Carolyn  and
       Peng, Violet",
-    booktitle = "Findings of the Association for Computational Linguistics",
-    month = nov,
+    booktitle = "Findings of the Association for Computational Linguistics: EMNLP",
+    month = {november},
     year = "2025",
-    keywords={EMNLP Findings},
+    nickname={EMNLP Findings},
     address = "Suzhou, China",
     publisher = "Association for Computational Linguistics",
     url = "https://aclanthology.org/2025.findings-emnlp.405/",
@@ -46,17 +46,18 @@
     title={Retrieval-Augmented Generation with Estimation of Source Reliability},
     author={Jeongyeon Hwang and Junyoung Park and Hyejin Park and Dongwoo Kim and Sangdon Park and Jungseul Ok},
     booktitle={Empirical Methods in Natural Language Processing},
-    keywords = {EMNLP},
+    nickname = {EMNLP},
     year={2025},
+    month={October},
     url={https://openreview.net/forum?id=SwfymlaTn3}
 }
 
 @InProceedings{moon2025holisticunlearningbenchmarkmultifaceted,
     title={Holistic Unlearning Benchmark: A Multi-Faceted Evaluation for Text-to-Image Diffusion Model Unlearning},
-    author={Saemi Moon and Minjong Lee and Sangdon Park and Dongwoo Kim},
+    author={Saemi Moon* and Minjong Lee* and Sangdon Park and Dongwoo Kim},
 
     booktitle = {International Conference on Computer Vision},
-    keywords = {ICCV},
+    nickname = {ICCV},
     year = {2025},
     month={October},
     url={https://arxiv.org/abs/2410.05664},
@@ -64,7 +65,7 @@
 
 @misc{lee2025onlineselectivegenerationadversarial,
       title={Online Selective Generation with Adversarial Bandit Feedback},
-      author={Minjae Lee and Yoonjae Jung and Sangdon Park},
+      author={Minjae Lee* and Yoonjae Jung* and Sangdon Park},
       year={2025},
       month={July},
       eprint={2506.14067},
@@ -77,7 +78,7 @@
     title={Ensuring Functional Correctness of Large Code Models with Selective Generation},
     author={Jaewoo Jeong and Taesoo Kim and Sangdon Park},
     booktitle={Neural Information Processing Systems},
-    keywords={NeurIPS DL4C Workshop},
+    nickname={NeurIPS DL4C Workshop},
     year={2025},
     month={December},
     url={https://arxiv.org/abs/2505.13553},
@@ -87,7 +88,7 @@
     title={{SOUNDBOOST: Effective RCA and Attack Detection for UAV via Acoustic Side-Channel}},
     author={Haoran Wang and Zheng Yang and Sangdon Park and Yibin Yang and Seulbae Kim and Willian Lunardi and Martin Andreoni and Taesoo Kim and Wenke Lee},
     booktitle={International Conference on Dependable Systems and Networks},
-    keywords={DSN},
+    nickname={DSN},
     year={2025},
     month={June},
     url={https://ieeexplore.ieee.org/document/11068853},
@@ -95,19 +96,20 @@
 
 @InProceedings{lee2024selective,
     title={{Selective Generation for Controllable Language Models}},
-    author={Minjae Lee and Kyungmin Kim and Taesoo Kim and Sangdon Park},
+    author={Minjae Lee* and Kyungmin Kim* and Taesoo Kim and Sangdon Park},
     booktitle={Neural Information Processing Systems},
-    keywords={NeurIPS},
+    nickname={NeurIPS},
     year={2024},
     month={December},
-    url={https://arxiv.org/abs/2307.09254}
+    url={https://arxiv.org/abs/2307.09254},
+    highlight={🏆 Spotlight -- Top 2.08\%}
 }
 
 @InProceedings{li2024shuo,
     title={{TRAQ: Trustworthy Retrieval Augmented Question Answering via Conformal Prediction}},
     author={Shuo Li and Sangdon Park and Insup Lee and Osbert Bastani},
     booktitle={North American Chapter of the Association for Computational Linguistics},
-    keywords={NAACL},
+    nickname={NAACL},
     year={2024},
     month={June},
     url={https://arxiv.org/abs/2307.04642}
@@ -115,9 +117,9 @@
 
 @InProceedings{park2024medbn,
     title={{MedBN: Robust Test Time Adaptation against Malicious Test Samples}},
-    author={Hyejin Park and Jeongyeon Hwang and Sunung Mun and Sangdon Park and Jungseul Ok},
+    author={Hyejin Park* and Jeongyeon Hwang* and Sunung Mun and Sangdon Park and Jungseul Ok},
     booktitle={Computer Vision and Pattern Recognition},
-    keywords={CVPR},
+    nickname={CVPR},
     year={2024},
     month={June},
     url={https://arxiv.org/abs/2403.19326}
@@ -129,7 +131,7 @@
     title={{PAC} Prediction Sets Under Label Shift},
     author={Wenwen Si and Sangdon Park and Insup Lee and Edgar Dobriban and Osbert Bastani},
     booktitle={International Conference on Learning Representations},
-    keywords={ICLR},
+    nickname={ICLR},
     year={2024},
     month={May},
     url={https://arxiv.org/abs/2310.12964}
@@ -139,7 +141,7 @@
     title={{Angelic Patches for Improving Third-Party Object Detector Performance}},
     author={Wenwen Si and Shuo Li and Sangdon Park and Insup Lee and Osbert Bastani},
     booktitle={Computer Vision and Pattern Recognition},
-    keywords={CVPR},
+    nickname={CVPR},
     year={2023},
     month={December},
     url={https://ieeexplore.ieee.org/document/10203919}
@@ -149,10 +151,9 @@
 @InProceedings{park2023conformal,
     title={{{{ACon$^2$}: Adaptive Conformal Consensus  for Provable Blockchain Oracles}}},
     author={Sangdon Park and Osbert Bastani and Taesoo Kim},
-    url = {https://arxiv.org/abs/2211.09330},
     howpublishe={\url{https://arxiv.org/abs/2211.09330}},
     booktitle={USENIX Security Symposium},
-    keywords={Security},
+    nickname={Security},
     year={2023},
     month={August},
     url={https://arxiv.org/abs/2211.09330}
@@ -162,7 +163,7 @@
     title={{CODiT}: Conformal Out-of-Distribution Detection in Time-Series  Data for Cyber-Physical Systems},
     author={Ramneet Kaur and Kaustubh Sridhar and Sangdon Park and Yahan Yang and Susmit Jha and Anirban Roy and Oleg Sokolsky and Insup Lee},
     booktitle={International Conference on Cyber-Physical Systems},
-    keywords={ICCPS},
+    nickname={ICCPS},
     year={2023},
     month={May},
     url={https://dl.acm.org/doi/10.1145/3576841.3585931}
@@ -172,6 +173,8 @@
       title={Unsafe's Betrayal: Abusing Unsafe Rust in Binary Reverse Engineering via Machine Learning},
       author={Sangdon Park and Xiang Cheng and Taesoo Kim},
       year={2022},
+      month={October},
+      day={31},
       eprint={2211.00111},
       archivePrefix={arXiv},
       primaryClass={cs.CR},
@@ -182,7 +185,7 @@
     title={{PAC Prediction Sets for Meta-Learning}},
     author={Park, Sangdon and Dobriban, Edgar and Lee, Insup and Bastani, Osbert},
     booktitle={Neural Information Processing Systems},
-    keywords={NeurIPS},
+    nickname={NeurIPS},
     year={2022},
     month={December},
     url={https://arxiv.org/abs/2207.02440}
@@ -193,6 +196,8 @@
       title={Towards PAC Multi-Object Detection and Tracking},
       author={Shuo Li and Sangdon Park and Xiayan Ji and Insup Lee and Osbert Bastani},
       year={2022},
+      month={April},
+      day={15},
       eprint={2204.07482},
       archivePrefix={arXiv},
       primaryClass={cs.CV},
@@ -204,12 +209,11 @@
     title = 	 {Sequential Covariate Shift Detection Using Classifier Two-Sample Tests},
     author =       {Jang, Sooyong and Park, Sangdon and Lee, Insup and Bastani, Osbert},
     booktitle = 	 {International Conference on Machine Learning},
-    keywords={ICML},
+    nickname={ICML},
     year = 	 {2022},
     month={July},
     pdf = 	 {https://proceedings.mlr.press/v162/jang22a/jang22a.pdf},
     url = 	 {https://proceedings.mlr.press/v162/jang22a.html},
-    abstract = 	 {A standard assumption in supervised learning is that the training data and test data are from the same distribution. However, this assumption often fails to hold in practice, which can cause the learned model to perform poorly. We consider the problem of detecting covariate shift, where the covariate distribution shifts but the conditional distribution of labels given covariates remains the same. This problem can naturally be solved using a two-sample test{—}i.e., test whether the current test distribution of covariates equals the training distribution of covariates. Our algorithm builds on classifier tests, which train a discriminator to distinguish train and test covariates, and then use the accuracy of this discriminator as a test statistic. A key challenge is that classifier tests assume given a fixed set of test covariates. In practice, test covariates often arrive sequentially over time{—}e.g., a self-driving car observes a stream of images while driving. Furthermore, covariate shift can occur multiple times{—}i.e., shift and then shift back later or gradually shift over time. To address these challenges, our algorithm trains the discriminator online. Additionally, it evaluates test accuracy using each new covariate before taking a gradient step; this strategy avoids constructing a held-out test set, which can improve sample efficiency. We prove that this optimization preserves the correctness{—}i.e., our algorithm achieves a desired bound on the false positive rate. In our experiments, we show that our algorithm efficiently detects covariate shifts on multiple datasets{—}ImageNet, IWildCam, and Py150.}
 }
 
 @inproceedings{
@@ -219,7 +223,7 @@
     booktitle={International Conference on Learning Representations},
     year={2022},
     month={April},
-    keywords={ICLR},
+    nickname={ICLR},
     url={https://arxiv.org/abs/2106.09848}
 }
 
@@ -229,7 +233,7 @@
     author={
     Ramneet Kaur and Susmit Jha and Anirban Roy and Sangdon Park and Edgar Dobriban and Oleg Sokolsky and Insup Lee},
     booktitle={Association for the Advancement of Artificial Intelligence},
-    keywords={AAAI},
+    nickname={AAAI},
     year={2021},
     month={February},
     url={https://arxiv.org/abs/2201.02331}
@@ -240,7 +244,7 @@
     title={{PAC} Confidence Predictions for Deep Neural Network Classifiers},
     author={Sangdon Park and Shuo Li and Insup Lee and Osbert Bastani},
     booktitle={International Conference on Learning Representations},
-    keywords={ICLR},
+    nickname={ICLR},
     year={2021},
     month={May},
     url={https://arxiv.org/abs/2011.00716}
@@ -251,7 +255,7 @@
     title={Calibrated prediction with covariate shift via unsupervised domain adaptation},
     author={Sangdon Park and Osbert Bastani and James Weimer and Insup Lee},
     booktitle={International Conference on Artificial Intelligence and Statistics},
-    keywords={AISTATS},
+    nickname={AISTATS},
     year={2020},
     month={August},
     url={https://arxiv.org/abs/2003.00343}
@@ -262,7 +266,7 @@
     title={{PAC} Confidence Sets for Deep Neural Networks via Calibrated Prediction},
     author={Sangdon Park and Osbert Bastani and Nikolai Matni and Insup Lee},
     booktitle={International Conference on Learning Representations},
-    keywords={ICLR},
+    nickname={ICLR},
     year={2020},
     month={April},
     url={https://arxiv.org/abs/2001.00106}
@@ -281,7 +285,7 @@
     title={Resilient linear classification: an approach to deal with attacks on training data},
     author={Park, Sangdon and Weimer, James and Lee, Insup},
     booktitle={International Conference on Cyber-Physical Systems},
-    keywords={ICCPS},
+    nickname={ICCPS},
     year={2017},
     month={April},
     url={https://arxiv.org/abs/1708.03366v2}
@@ -292,7 +296,7 @@
     title={Integrated intelligence for human-robot teams},
     author={Oh, Jean and Howard, Thomas M and Walter, Matthew R and Barber, Daniel and Zhu, Menglong and Park, Sangdon and Suppe, Arne and Navarro-Serment, Luis and Duvallet, Felix and Boularias, Abdeslam and others},
     booktitle={International Symposium on Experimental Robotics},
-    keywords={ISER},
+    nickname={ISER},
     year={2016},
     month={October},
     url={https://link.springer.com/chapter/10.1007/978-3-319-50115-4_28}
@@ -302,7 +306,7 @@
     title={Abnormal object detection by canonical scene-based contextual model},
     author={Park, Sangdon and Kim, Wonsik and Lee, Kyoung Mu},
     booktitle={European Conference on Computer Vision},
-    keywords={ECCV},
+    nickname={ECCV},
     year={2012},
     month={October},
     url={https://link.springer.com/chapter/10.1007/978-3-642-33712-3_47}
