--- a/content/authors/Sangdon Park/papers.bib
+++ b/content/authors/Sangdon Park/papers.bib
@@ -1,5 +1,5 @@
 @misc{lee2025aikillswitchmalicious,
-      title={AI Kill Switch for malicious web-based LLM agent},
+      title={AI Kill Switch for Malicious Web-based LLM Agent},
       author={Sechan Lee and Sangdon Park},
       year={2025},
       month={September},
