--- a/content/authors/Sangdon Park/papers.bib
+++ b/content/authors/Sangdon Park/papers.bib
@@ -20,6 +20,7 @@
       archivePrefix={arXiv},
       primaryClass={cs.CR},
       url={https://arxiv.org/abs/2509.14589},
+      highlight={🏆 DARPA AIxCC Winner -- \$4M }
 }
 
 @inproceedings{kim2025chronobias,
