--- a/content/authors/Sangdon Park/papers.bib
+++ b/content/authors/Sangdon Park/papers.bib
@@ -73,6 +73,7 @@
       archivePrefix={arXiv},
       primaryClass={cs.LG},
       url={https://arxiv.org/abs/2506.14067},
+      highlight={🏆 Best Paper Finalist from CKAIA},
 }
 
 @InProceedings{jeong2025ensuringfunctionalcorrectnesslarge,
@@ -103,7 +104,7 @@
     year={2024},
     month={December},
     url={https://arxiv.org/abs/2307.09254},
-    highlight={🏆 Spotlight -- Top 2.08\%}
+    highlight={🏆 Spotlight -- Top 2.08\%, 🏆 POSTECH GSAI BK21 Best Paper Award}
 }
 
 @InProceedings{li2024shuo,
@@ -113,7 +114,8 @@
     nickname={NAACL},
     year={2024},
     month={June},
-    url={https://arxiv.org/abs/2307.04642}
+    url={https://arxiv.org/abs/2307.04642},
+    highlight={🏆 ICML’23 TEACH Workshop Best Paper Award},
 }
 
 @InProceedings{park2024medbn,
@@ -167,7 +169,8 @@
     nickname={ICCPS},
     year={2023},
     month={May},
-    url={https://dl.acm.org/doi/10.1145/3576841.3585931}
+    url={https://dl.acm.org/doi/10.1145/3576841.3585931},
+    highlight={🏆 ICCPS’23 Best Paper Award Finalist},
 }
 
 @misc{park2022unsafesbetrayalabusingunsafe,
