--- a/content/authors/Sangdon Park/papers.bib
+++ b/content/authors/Sangdon Park/papers.bib
@@ -1,3 +1,15 @@
+@inproceedings{
+    anonymous2026online,
+    title={Online Conformal Prediction with Adversarial Feedback via Regret Minimization},
+    author={Junyoung Yang and Kyungmin Kim and Sangdon Park },
+    booktitle={The Fourteenth International Conference on Learning Representations},
+    nickname={ICLR},
+    year={2026},
+    month={January},
+    day={26},
+    url={https://openreview.net/forum?id=RMWcdp5IUy}
+}
+
 @misc{lee2025aikillswitchmalicious,
       title={AI Kill Switch for Malicious Web-based LLM Agent},
       author={Sechan Lee and Sangdon Park},
