--- a/content/authors/Sangdon Park/papers.bib
+++ b/content/authors/Sangdon Park/papers.bib
@@ -1,7 +1,7 @@
 @inproceedings{
     anonymous2026online,
     title={Online Conformal Prediction with Adversarial Feedback via Regret Minimization},
-    author={Junyoung Yang and Kyungmin Kim and Sangdon Park },
+    author={Junyoung Yang* and Kyungmin Kim* and Sangdon Park },
     booktitle={The Fourteenth International Conference on Learning Representations},
     nickname={ICLR},
     year={2026},
